2015-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* Merge cpp-merge-upstream branch to get improved standard support.

2015-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* .version:
	  Bump version due to improved standard support.

2015-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/port.h:
	  Spelling fixes.

2015-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/Makefile.in:
	  Fix build-dependency of sdcpp on libiberty.
	* support/cpp/sdcpp.opt,
	  support/cpp/sdcpp-opts.c,
	  support/cpp/libcpp/init.c:
	  Support C11 in preprocessor.
	* src/SDCCmain.c:
	  Fix standard support, add support for c95 and sdcc11 dialects.

2015-10-22 Ben Shi <powerstudio1st AT 163 DOT com>

	* SDCC.y:
	  Add checks for NULL pointers.

2015-10-19 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c:
	* src/SDCCglue.c:
	* src/SDCCglue.h:
	  Eliminate redundant string literals to be generated.
	* support/regression/tests/bug-2089.c:
	  Add a new test case.

2015-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/libcpp/*:
	  Reformat to reduce diff to upstream cpp.

2015-10-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/libcpp/*:
	  Reformat to reduce diff to upstream cpp.

2015-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.lex:
	  Support C95 wide string literals.

2015-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/cpp/libcpp/include/*:
	  Reformat to reduce diff to upstream version.

2015-10-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/util/dbuf_string.c:
	  Add check for null pointer.

2015-10-09 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c:
	  Wrap strtoul() to support $-prefix hex numbers.

2015-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* New memory management by merging malloc branch into trunk.

2015-10-09 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkaomf51.c:
	  Add bound check while accessing a buffer in the heap.
