@@ -1,3 +1,8 @@
+2015-10-27 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCglue.c:
+	  Bug fix: char s[10] = "ab", bytes beyond "ab" sometimes aren't set to 0.
+
 2015-10-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* Merge cpp-merge-upstream branch to get improved standard support.
